clusters/cluster/apps/neuland-app/neuland-next-staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuland-next-staging
  namespace: neuland-app
spec:
  replicas: 1
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: neuland-next-staging
  template:
    metadata:
      labels:
        app: neuland-next-staging
    spec:
      containers:
        - name: neuland-next-staging
          image: ghcr.io/neuland-ingolstadt/neuland.app-native/webapp:staging-284 # {"$imagepolicy": "flux-system:neuland-next-staging"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
