clusters/cluster/apps/neuland-app/neuland-next-staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuland-next-staging
  namespace: neuland-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dev.app.neuland.app
    secretName: neuland-app-wildcard-tls
  rules:
  - host: dev.app.neuland.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neuland-next-staging
            port:
              number: 3000
